--- a/try-out/suggest_card_features.ipynb
+++ b/try-out/suggest_card_features.ipynb
@@ -2295,6 +2295,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stemming, lemmatisierung"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
